# ICT398

./: .doxyconf  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: Git.hpp.in  Version.hpp.in
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
res/prefab/: basketball.json  box.json  boxes.json  city.json  classroom.json  desk.json  nanosuit.json  rocketlauncher.json  slopedtray.json  stationarybox.json  weightedlever.json
res/scene/: 3x3boxes.json  classroom.json  classroom_simulation.json  default.json  demo01.json  demo02.json  demo03.json  demo04.json  demo05.json  demo06.json  demo07.json  physicstest01.json  physicstest02.json  physicstest03.json  physicstest04.json  physicstest05.json  weightedlevertest.json
res/shader/: animation.prog  default.prog  rp3dmesh.frag  rp3dmesh.prog
script/component/: camera_keyboard_control.lua  camera_keyboard_jetpack_control.lua  camera_mouse_control.lua  debug.lua  fsm_test.lua  handle_collision_events.lua  handle_npc_collisions.lua  health.lua  ui_test.lua
shader/: animation.prog  animation.vert  heightfield.frag  heightfield.prog  navmesh.frag  navmesh.prog
src/: Main.cpp
src/afk/: Afk.cpp  Afk.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  NumericTypes.hpp
src/afk/ai/: CMakeLists.txt  ChunkyTriMesh.cpp  ChunkyTriMesh.hpp  Crowds.cpp  Crowds.hpp  DifficultyManager.cpp  DifficultyManager.hpp  NavMeshManager.cpp  NavMeshManager.hpp
src/afk/ai/behaviour/: BaseBehaviour.hpp  CMakeLists.txt  Chase.cpp  Chase.hpp  Evade.cpp  Flee.cpp  Flee.hpp  MoveTo.cpp  MoveTo.hpp  Path.cpp  Path.hpp  PathFollow.cpp  PathFollow.hpp  Patrol.cpp  Patrol.hpp  Pursue.cpp  Wander.cpp  Wander.hpp  Wandering.cpp
src/afk/asset/: Asset.hpp  AssetFactory.cpp  AssetFactory.hpp
src/afk/component/: AgentComponent.cpp  AgentComponent.hpp  AnimComponent.cpp  AnimComponent.hpp  BaseComponent.hpp  CMakeLists.txt  EmotionComponent.hpp  GameObject.hpp  LuaScript.cpp  LuaScript.hpp  ScriptsComponent.cpp  ScriptsComponent.hpp  TagComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/afk/config/: CMakeLists.txt  Config.hpp  ConfigManager.cpp  ConfigManager.hpp
src/afk/debug/: Assert.hpp
src/afk/ecs/: CMakeLists.txt  Ecs.cpp  Ecs.hpp  Entity.hpp  Registry.hpp  SystemManager.cpp  SystemManager.hpp
src/afk/ecs/component/: AffordanceComponent.hpp  ColliderComponent.hpp  Component.hpp  EmotionComponent.hpp  ModelComponent.hpp  ModelsComponent.hpp  Needs.cpp  Needs.hpp  NeedsComponent.hpp  PhysicsComponent.hpp  PositionComponent.hpp  RocketLauncherComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
src/afk/ecs/system/: AffordanceSystem.cpp  AffordanceSystem.hpp  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/afk/event/: CMakeLists.txt  Event.hpp  EventManager.cpp  EventManager.hpp
src/afk/io/: CMakeLists.txt  Json.cpp  Json.hpp  JsonSerialization.cpp  JsonSerialization.hpp  Log.cpp  Log.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelSource.hpp  Path.cpp  Path.hpp  Time.cpp  Time.hpp  Unicode.cpp  Unicode.hpp
src/afk/physics/: CMakeLists.txt  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsBodySystem.cpp  PhysicsBodySystem.hpp  RigidBodyType.hpp  Transform.cpp  Transform.hpp
src/afk/physics/shape/: Box.hpp  Capsule.hpp  HeightMap.cpp  HeightMap.hpp  Sphere.hpp
src/afk/prefab/: CMakeLists.txt  Prefab.hpp  PrefabManager.cpp  PrefabManager.hpp
src/afk/render/: Animation.hpp  Bone.cpp  Bone.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DrawModel.hpp  DrawModelSystem.cpp  DrawModelSystem.hpp  GlfwContext.cpp  GlfwContext.hpp  Index.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  WireframeMesh.hpp
src/afk/render/opengl/: MeshHandle.hpp  ModelHandle.hpp  Renderer.cpp  Renderer.hpp  ShaderHandle.hpp  ShaderProgramHandle.hpp  TextureHandle.hpp
src/afk/renderer/: Animation.hpp  Bone.cpp  Bone.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Index.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelRenderSystem.cpp  ModelRenderSystem.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp
src/afk/renderer/opengl/: MeshHandle.hpp  ModelHandle.hpp  Renderer.cpp  Renderer.hpp  ShaderHandle.hpp  ShaderProgramHandle.hpp  TextureHandle.hpp
src/afk/scene/: CMakeLists.txt  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/afk/script/: Bindings.cpp  Bindings.hpp  BindingsDearImgui.cpp  BindingsDearImgui.hpp  CMakeLists.txt  Script.cpp  StateMachine.cpp  StateMachine.hpp
src/afk/terrain/: TerrainManager.cpp  TerrainManager.hpp
src/afk/ui/: CMakeLists.txt  Log.cpp  Log.hpp  Ui.cpp  Ui.hpp  UiManager.cpp  UiManager.hpp  Unicode.cpp  Unicode.hpp
src/afk/utility/: ArrayOf.hpp  FixedWidthNumeric.hpp  Visitor.hpp
